--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,38 @@
-client
+# exectuon files
+chat
+utils
 server
+client
 
-client.o
-server.o
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
 
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
